# geometry_of_reasoning

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
data/debug/: parser_failure_bank.csv  parser_failure_bank_summary.json  parser_failure_bank_v3_full_1319_policy_layerfix.csv  parser_failure_bank_v3_full_1319_policy_layerfix_summary.json  parser_failure_bank_validation_200_accountingfix.csv  parser_failure_bank_validation_200_accountingfix_summary.json  parser_failure_bank_validation_200_multilayer.csv  parser_failure_bank_validation_200_multilayer_repro.csv  parser_failure_bank_validation_200_multilayer_repro_summary.json  parser_failure_bank_validation_200_multilayer_summary.json  parser_failure_bank_validation_200_parserfix_reasonaware.csv  parser_failure_bank_validation_200_parserfix_reasonaware_summary.json  parser_failure_bank_validation_200_policy_layerfix.csv  parser_failure_bank_validation_200_policy_layerfix_summary.json  (+8 more)
docs/: TODO.md  development-logs.md  development_plan.md  experiment_run_guide.md  proje_oneri_dokumani.md
report/: main.tex  references.bib
scripts/: build_parser_failure_bank.py  export_report_figures.py  run_ablation.py  run_demo_case.py  run_generation.py  run_judge.py  run_metrics.py  run_phase2_labeling.py  run_phase3_synthetic_validation.py  run_smoke_gsm8k_pipeline.py  run_stability_suite.py
src/: __init__.py
tests/: test_ablation_reporting.py  test_calibration.py  test_early_warning.py  test_generation_runner.py  test_lid_math.py  test_step_parser.py  test_sympy_judge.py  test_uncertainty.py
(+20 files in other folders)
